--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@
 Karol to piczka!
 <div class="login">
       <h1>Login to Web App</h1>
+    <h2>{{ message }}</h2>
       <form method="post" action="login">
         <p><input type="text" name="login" value="" placeholder="Username"></p>
         <p><input type="password" name="password" value="" placeholder="Password"></p>
