--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body>
-Karol to pica i zabijajo go utopce
+Padalec to pica i zabijajo go utopce
 </body>
 </html>
