routing chyba smiga

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,6 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-Padalec to pica i zabijajo go utopce
+Fapowicz to pica i zabijajo go utopce
 </body>
 </html>
