--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-Padalec to piczka!
+Fapowicz to piczka!
 <div class="login">
       <h1>Login to Web App</h1>
     <h2>{{ message }}</h2>
