poprawiłem dodawanie wiadomości

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,9 @@
     <title></title>
 </head>
 <body>
-Fapowicz to piczka!
 <div class="login">
       <h1>Login to Web App</h1>
-    <h2>{{ message }}</h2>
+    <h2 style="color: deeppink">{{ info }}</h2>
       <form method="post" action="login">
         <p><input type="text" name="login" value="" placeholder="Username"></p>
         <p><input type="password" name="password" value="" placeholder="Password"></p>
