--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         <p><input type="password" name="password" value="" placeholder="Password"></p>
         <p class="submit"><input type="submit" name="commit" value="Login"></p>
       </form>
-        <form action="register">
+        <form method="post" action="registration">
             <button>Register</button>
         </form>
     </div>
