--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
+<h2 style="color: deeppink">{{ info }}</h2>
 {{ notes }}
 <form method="post" action="comment">
 Comment:<br />
