przypominanie hasła(działające)
Został do obsłużenia przypadek złego loginu.

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,9 @@
         <form method="post" action="registration">
             <button>Register</button>
         </form>
+        <form method="post" action="remind_password">
+            <button>Remind password</button>
+        </form>
     </div>
 </body>
 </html>
