--- a/templates/remind_password.html
+++ b/templates/remind_password.html
@@ -9,9 +9,11 @@
       <h1>Podaj login</h1>
     <h2>{{ question }}</h2>
     <h2 style="color: deeppink">{{ info }}</h2>
-      <form method="post" action="remind_login">
+      <form method="post" action="remind_password_answer">
         <p><input type="password" name="answer" value="" placeholder="Answer"></p>
-        <p class="submit"><input type="submit" name="commit" value="RemindAnswer"></p>
+        <p><input type="password" name="newpassword" value="" placeholder="New password"></p>
+        <p><input type="password" name="newpassword_repeat" value="" placeholder="Repeat password"></p>
+        <p class="submit"><input type="submit" name="commit" value="Change password"></p>
       </form>
     <button>Go back</button>
     </div>
