--- a/templates/remind_password_login.html
+++ b/templates/remind_password_login.html
@@ -8,9 +8,9 @@
 <div class="login">
       <h1>Podaj login</h1>
     <h2 style="color: deeppink">{{ info }}</h2>
-      <form method="post" action="remind_login">
+      <form method="post" action="remind_password_login">
         <p><input type="text" name="login" value="" placeholder="Username"></p>
-        <p class="submit"><input type="submit" name="commit" value="RemindLogin"></p>
+        <p class="submit"><input type="submit" name="commit" value="OK"></p>
       </form>
     <button>Go back</button>
     </div>
