roting dla karola

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,9 @@ Comment:<br />
   <input type="password" name="password" value="" placeholder="Enter your password">
   <input type='submit' value='Submit' />
     </form>
+<form action="settings">
+<button action="logout">Settings</button>
+</form>
 <form action="logout">
 <button action="logout">Logout</button>
 </form>
