--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,7 @@ Comment:<br />
   <input type='submit' value='Submit' />
     </form>
 <form action="settings">
-<button action="logout">Settings</button>
+<button action="settings">Settings</button>
 </form>
 <form action="logout">
 <button action="logout">Logout</button>
